# zerobyte_tauri

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  TROUBLESHOOTING.md  package.json
.github/workflows/: build-windows.yml  release.yml
app/: root.tsx
app/client/api-client/: index.ts  sdk.gen.ts  types.gen.ts
app/client/components/: app-sidebar.tsx  auth-layout.tsx  directory-browser.tsx  file-tree.tsx  layout.tsx  notification-permission-prompt.tsx  notification-test-panel.tsx  restore-form.tsx  titlebar.tsx
app/client/hooks/: use-file-browser.ts  use-notifications.ts  use-server-events.ts
app/client/lib/: constants.ts  notifications.ts  version.ts
app/drizzle/: 0033_thankful_master_chief.sql
app/drizzle/meta/: 0033_snapshot.json  _journal.json
app/lib/: auth.ts
app/schemas/: restic.ts
app/server/: app.ts  index.ts
app/server/db/: db.ts  (+1 more)
docs/: NOTIFICATIONS_INTEGRATION.md  TAURI_NOTIFICATIONS.md  tauri-notifications-example.tsx
examples/: README.md
examples/basic-docker-compose/: README.md
examples/directory-bind-mount/: README.md
examples/rclone-config-mount/: README.md
examples/secrets-placeholders/: README.md
examples/simplified-docker-compose/: README.md
examples/tailscale-sidecar/: README.md
scripts/: build-linux-binaries.sh  build-server.ps1  download-linux-binaries.sh  download-windows-binaries.ps1  rebrand.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  service.rs
(+60 files in other folders)
